--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -1,18 +1,29 @@
-name: MD to PDF Conversion
+name: Convert Markdown to PDF
 
 on:
   push:
     branches:
-      - main
+      - main  # Adjust the branch name as needed
 
 jobs:
   Convert:
     runs-on: ubuntu-latest
     steps:
-      - name: Clone repo
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Generate PDF from Markdown Files
-        uses: purplebearddan/ghAction-md2pdf@v1
-        with:
-          pdf_file_name: 'David_Wasilewski_Resume.pdf'
+      - name: Install Pandoc
+        run: sudo apt-get install pandoc
+
+      - name: Convert to PDF
+        run: |
+          pandoc current.md -o David_Wasilewski_Resume.pdf
+
+      - name: Commit PDF
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git checkout -b pdf-generation  # Switch to the new branch
+          git add David_Wasilewski_Resume.pdf
+          git commit -m "Auto Add David_Wasilewski_Resume.pdf"
+          git push origin pdf-generation  # Push changes to the new branch
