--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -1,29 +1,28 @@
-name: Convert Markdown to PDF
-
+# .github/workflows/convert-to-pdf.yml
+name: Docs to PDF
+# This workflow is triggered on pushes to the repository.
 on:
   push:
     branches:
-      - main  # Adjust the branch name as needed
+      - main
+    paths:
+      - '.'
+      - 'README.md'
 
 jobs:
-  Convert:
+  converttopdf:
+    name: Build PDF
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install Pandoc
-        run: sudo apt-get install pandoc
-
-      - name: Convert to PDF
-        run: |
-          pandoc current.md -o David_Wasilewski_Resume.pdf
-
-      - name: Commit PDF
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git checkout -b pdf-generation  # Switch to the new branch
-          git add David_Wasilewski_Resume.pdf
-          git commit -m "Auto Add David_Wasilewski_Resume.pdf"
-          git push origin pdf-generation  # Push changes to the new branch
+      - uses: actions/checkout@v3
+      - uses: baileyjm02/markdown-to-pdf@v1
+        with:
+          input_dir: .
+          output_dir: .
+          images_dir: .
+          image_import: .
+          build_html: false
+      - uses: actions/upload-artifact@v3
+        with:
+          name: .
+          path: .
