--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -7,7 +7,7 @@ on:
       - main
     paths:
       - '.'
-      - 'README.md'
+      - './README.md'
 
 jobs:
   converttopdf:
@@ -16,14 +16,13 @@ jobs:
     steps:
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
-          input_dir: .
-          output_dir: .
-          images_dir: .
-          image_import: .
+          input_dir: '.README.md'
+          output_dir: '.'
+          images_dir: '.'
+          image_import: '.'
           build_html: false
       - uses: actions/upload-artifact@v3
         with:
-          name: .
-          path: .
+          name: '.David_Wasilewski_Resume.pdf'
+          path: '.'
 
-          
