--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -6,19 +6,17 @@ on:
       - main
     paths:
       - 'README.md'
+      - '.github/workflows/convert-to-pdf.yml'
 
 jobs:
   converttopdf:
     name: Build PDF
     runs-on: ubuntu-latest
     steps:
-      - uses: baileyjm02/markdown-to-pdf@v1
-        with:
-          input_dir: .
-          output_dir: .
-          images_dir: .
-          image_import: .
-          build_html: false
+      - name: Install Pandoc
+        run: sudo apt-get update && sudo apt-get install pandoc
+      - name: Convert Markdown to PDF
+        run: pandoc --pdf-engine=weasyprint README.md -o README.pdf
       - uses: actions/upload-artifact@v3
         with:
           name: David_Wasilewski_Resume
