--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -24,4 +24,4 @@ jobs:
           for f in *.md; do
             cat "$f"
             echo
-          done | md-to-pdf > ../_output/result.pdf
+          done | md-to-pdf > David_Wasilewski_Resume.pdf
