--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -1,27 +1,31 @@
-name: Convert README to PDF
+# .github/workflows/convert-to-pdf.yml
 
+name: Docs to PDF
+# This workflow is triggered on pushes to the repository.
 on:
   push:
     branches:
-      - main  # Adjust this branch name if needed
+      - main
+    # Paths can be used to only trigger actions when you have edited certain files, such as a file within the /docs directory
+    paths:
+      - '.'
 
 jobs:
-  build:
+  converttopdf:
+    name: Build PDF
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install dependencies
-        run: npm install -g md-to-pdf
-
-      - name: Create output folder
-        run: mkdir -p _output
-
-      - name: Convert README to PDF
-        run: |
-          for f in *.md; do
-            cat "$f"
-            echo
-          done | md-to-pdf > David_Wasilewski_Resume.pdf
+      - uses: actions/checkout@v3
+      - uses: baileyjm02/markdown-to-pdf@v1
+        with:
+          input_dir: docs
+          output_dir: pdfs
+          images_dir: docs/images
+          # for example <img src="./images/file-name.png">
+          image_import: ./images
+          # Default is true, can set to false to only get PDF files
+          build_html: false
+      - uses: actions/upload-artifact@v3
+        with:
+          name: David_Wasilewski_Resume
+          path: pdfs
