--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -8,7 +8,8 @@ on:
       - main
     # Paths can be used to only trigger actions when you have edited certain files, such as a file within the /docs directory
     paths:
-      - '.'
+      - '.github/workflows'
+      - 'README.md'
 
 jobs:
   converttopdf:
