--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -6,6 +6,7 @@ on:
       - main
     # Paths can be used to only trigger actions when you have edited certain files, such as a file within the /docs directory
     paths:
+      - '.github/workflows'
       - 'README.md'
 
 jobs:
@@ -25,5 +26,5 @@ jobs:
           build_html: false
       - uses: actions/upload-artifact@v3
         with:
-          name: David_Wasilewski_Resume
+          name: David_Wasilewski_Resume.pdf
           path: pdfs
