--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -1,10 +1,9 @@
-name: Docs to PDF
-# This workflow is triggered on pushes to the repository.
+name: Docs to PDF and Upload Release Asset
+
 on:
   push:
     branches:
       - main
-    # Paths can be used to only trigger actions when you have edited certain files, such as a file within the /docs directory
     paths:
       - '.github/workflows'
       - 'README.md'
@@ -17,14 +16,33 @@ jobs:
       - uses: actions/checkout@v3
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
-          input_dir: docs
-          output_dir: pdfs
-          images_dir: docs/images
-          # for example <img src="./images/file-name.png">
-          image_import: ./images
+          input_dir: .
+          output_dir: .
+          images_dir: .
+          # for example <img src="./file-name.png">
+          image_import: .
           # Default is true, can set to false to only get PDF files
           build_html: false
       - uses: actions/upload-artifact@v3
         with:
           name: David_Wasilewski_Resume.pdf
-          path: pdfs
+          path: .
+  build:
+    name: Upload Release Asset
+    needs: converttopdf
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Build project
+        run: |
+          mkdir -p app/build/outputs/apk/release
+          echo hello > app/build/outputs/apk/release/app-release-unsigned.apk
+      - name: Release with Notes
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            app/build/outputs/apk/release/app-release-unsigned.apk
+            other/files/as/needed
+        env:
+          GITHUB_TOKEN: ${{secrets.TOKEN }}
