--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -1,10 +1,13 @@
 name: Docs to PDF and Upload Release Asset
 
+# This workflow is triggered on pushes to the repository.
 on:
   push:
     branches:
       - main
+    # Paths can be used to only trigger actions when you have edited certain files, such as a file within the /docs directory
     paths:
+      - '.github/workflows'
       - 'README.md'
 
 jobs:
@@ -15,17 +18,17 @@ jobs:
       - uses: actions/checkout@v3
       - uses: baileyjm02/markdown-to-pdf@v1
         with:
-          input_dir: .
-          output_dir: .
-          images_dir: .
-          # for example <img src="./file-name.png">
-          image_import: .
+          input_dir: docs
+          output_dir: pdfs
+          images_dir: docs/images
+          # for example <img src="./images/file-name.png">
+          image_import: ./images
           # Default is true, can set to false to only get PDF files
           build_html: false
       - uses: actions/upload-artifact@v3
         with:
           name: David_Wasilewski_Resume.pdf
-          path: .
+          path: pdfs
   build:
     name: Upload Release Asset
     needs: converttopdf
@@ -44,4 +47,4 @@ jobs:
             app/build/outputs/apk/release/app-release-unsigned.apk
             other/files/as/needed
         env:
-          GITHUB_TOKEN: ${{secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
