--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -25,10 +25,12 @@ jobs:
         run: npm install -g md-to-pdf
 
       - name: Convert MD to PDF
-        run: md-to-pdf README.md --config-file=null
+        run: |
+          md-to-pdf README.md --launch-options '{"args":["--no-sandbox","--disable-setuid-sandbox"]}'
 
       - name: Rename PDF
-        run: mv README.pdf David_Wasilewski_Resume.pdf
+        run: |
+          mv README.pdf David_Wasilewski_Resume.pdf
 
       - name: Commit changes
         run: |
