--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -21,16 +21,28 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Install md-to-pdf
-        run: npm install -g md-to-pdf
+      - name: Install dependencies
+        run: |
+          npm install -g marked puppeteer
 
       - name: Convert MD to PDF
         run: |
-          md-to-pdf README.md --launch-options '{"args":["--no-sandbox","--disable-setuid-sandbox"]}'
-
-      - name: Rename PDF
-        run: |
-          mv README.pdf David_Wasilewski_Resume.pdf
+          node -e "
+          const fs = require('fs');
+          const marked = require('marked');
+          const puppeteer = require('puppeteer');
+          
+          async function convert() {
+            const md = fs.readFileSync('README.md', 'utf8');
+            const html = marked.parse(md);
+            const browser = await puppeteer.launch({args: ['--no-sandbox']});
+            const page = await browser.newPage();
+            await page.setContent(html);
+            await page.pdf({path: 'David_Wasilewski_Resume.pdf'});
+            await browser.close();
+          }
+          convert();
+          "
 
       - name: Commit changes
         run: |
