--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -26,24 +26,25 @@ jobs:
           npm init -y
           npm install marked puppeteer
 
-      - name: Convert MD to PDF
+      - name: Create conversion script
         run: |
-          node -e "
-          const fs = require('fs');
-          const marked = require('marked');
-          const puppeteer = require('puppeteer');
+          echo 'const fs = require("fs");
+          const marked = require("marked");
+          const puppeteer = require("puppeteer");
           
           async function convert() {
-            const md = fs.readFileSync('README.md', 'utf8');
+            const md = fs.readFileSync("README.md", "utf8");
             const html = marked.parse(md);
-            const browser = await puppeteer.launch({args: ['--no-sandbox']});
+            const browser = await puppeteer.launch({args: ["--no-sandbox"]});
             const page = await browser.newPage();
             await page.setContent(html);
-            await page.pdf({path: 'David_Wasilewski_Resume.pdf'});
+            await page.pdf({path: "David_Wasilewski_Resume.pdf"});
             await browser.close();
           }
-          convert();
-          "
+          convert();' > convert.js
+
+      - name: Convert MD to PDF
+        run: node convert.js
 
       - name: Commit changes
         run: |
