--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -24,18 +24,23 @@ jobs:
       - name: Install dependencies
         run: |
           npm init -y
-          npm install marked puppeteer
+          npm install marked puppeteer-core
+          sudo apt-get update
+          sudo apt-get install -y chromium-browser
 
       - name: Create conversion script
         run: |
           echo 'const fs = require("fs");
           const marked = require("marked");
-          const puppeteer = require("puppeteer");
+          const puppeteer = require("puppeteer-core");
           
           async function convert() {
             const md = fs.readFileSync("README.md", "utf8");
             const html = marked.parse(md);
-            const browser = await puppeteer.launch({args: ["--no-sandbox"]});
+            const browser = await puppeteer.launch({
+              executablePath: "/usr/bin/chromium-browser",
+              args: ["--no-sandbox"]
+            });
             const page = await browser.newPage();
             await page.setContent(html);
             await page.pdf({path: "David_Wasilewski_Resume.pdf"});
