--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -24,29 +24,21 @@ jobs:
       - name: Install dependencies
         run: |
           npm init -y
-          npm install marked puppeteer-core
+          npm install marked
           sudo apt-get update
-          sudo apt-get install -y chromium-browser
+          sudo apt-get install -y wkhtmltopdf
 
       - name: Create conversion script
         run: |
           echo 'const fs = require("fs");
           const marked = require("marked");
-          const puppeteer = require("puppeteer-core");
+          const { execSync } = require("child_process");
           
-          async function convert() {
-            const md = fs.readFileSync("README.md", "utf8");
-            const html = marked.parse(md);
-            const browser = await puppeteer.launch({
-              executablePath: "/usr/bin/chromium-browser",
-              args: ["--no-sandbox"]
-            });
-            const page = await browser.newPage();
-            await page.setContent(html);
-            await page.pdf({path: "David_Wasilewski_Resume.pdf"});
-            await browser.close();
-          }
-          convert();' > convert.js
+          const md = fs.readFileSync("README.md", "utf8");
+          const html = marked.parse(md);
+          fs.writeFileSync("temp.html", html);
+          execSync("wkhtmltopdf --enable-local-file-access temp.html David_Wasilewski_Resume.pdf");
+          fs.unlinkSync("temp.html");' > convert.js
 
       - name: Convert MD to PDF
         run: node convert.js
