--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -34,10 +34,81 @@ jobs:
           const marked = require("marked");
           const { execSync } = require("child_process");
           
+          const css = `
+            <style>
+              body {
+                font-family: Arial, sans-serif;
+                line-height: 1.6;
+                max-width: 800px;
+                margin: 40px auto;
+                padding: 20px;
+              }
+              h1, h2, h3 {
+                color: #2c3e50;
+                margin-top: 1.5em;
+              }
+              a {
+                color: #3498db;
+                text-decoration: none;
+              }
+              a:hover {
+                text-decoration: underline;
+              }
+              ul, ol {
+                padding-left: 2em;
+              }
+              li {
+                margin: 0.5em 0;
+              }
+              code {
+                background: #f8f9fa;
+                padding: 0.2em 0.4em;
+                border-radius: 3px;
+                font-family: monospace;
+              }
+              pre {
+                background: #f8f9fa;
+                padding: 1em;
+                border-radius: 5px;
+                overflow-x: auto;
+              }
+              blockquote {
+                border-left: 4px solid #3498db;
+                margin: 1em 0;
+                padding-left: 1em;
+                color: #666;
+              }
+              table {
+                border-collapse: collapse;
+                width: 100%;
+                margin: 1em 0;
+              }
+              th, td {
+                border: 1px solid #ddd;
+                padding: 8px;
+                text-align: left;
+              }
+              th {
+                background-color: #f8f9fa;
+              }
+            </style>
+          `;
+          
           const md = fs.readFileSync("README.md", "utf8");
           const html = marked.parse(md);
-          fs.writeFileSync("temp.html", html);
-          execSync("wkhtmltopdf --enable-local-file-access temp.html David_Wasilewski_Resume.pdf");
+          const fullHtml = `<!DOCTYPE html>
+            <html>
+              <head>
+                <meta charset="utf-8">
+                ${css}
+              </head>
+              <body>
+                ${html}
+              </body>
+            </html>`;
+          
+          fs.writeFileSync("temp.html", fullHtml);
+          execSync("wkhtmltopdf --enable-local-file-access --margin-top 20 --margin-right 20 --margin-bottom 20 --margin-left 20 temp.html David_Wasilewski_Resume.pdf");
           fs.unlinkSync("temp.html");' > convert.js
 
       - name: Convert MD to PDF
