--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -24,15 +24,13 @@ jobs:
       - name: Install dependencies
         run: |
           npm init -y
-          npm install marked
-          sudo apt-get update
-          sudo apt-get install -y wkhtmltopdf
+          npm install marked puppeteer
 
       - name: Create conversion script
         run: |
           echo 'const fs = require("fs");
           const marked = require("marked");
-          const { execSync } = require("child_process");
+          const puppeteer = require("puppeteer");
           
           const css = `
             <style>
@@ -97,22 +95,48 @@ jobs:
             </style>
           `;
           
-          const md = fs.readFileSync("README.md", "utf8");
-          const html = marked.parse(md);
-          const fullHtml = `<!DOCTYPE html>
-            <html>
-              <head>
-                <meta charset="utf-8">
-                ${css}
-              </head>
-              <body>
-                ${html}
-              </body>
-            </html>`;
+          async function convert() {
+            const md = fs.readFileSync("README.md", "utf8");
+            const html = marked.parse(md);
+            const fullHtml = `<!DOCTYPE html>
+              <html>
+                <head>
+                  <meta charset="utf-8">
+                  ${css}
+                </head>
+                <body>
+                  ${html}
+                </body>
+              </html>`;
+            
+            fs.writeFileSync("temp.html", fullHtml);
+            
+            const browser = await puppeteer.launch({
+              args: ["--no-sandbox", "--disable-setuid-sandbox"]
+            });
+            const page = await browser.newPage();
+            await page.goto(`file://${process.cwd()}/temp.html`, {
+              waitUntil: "networkidle0"
+            });
+            
+            await page.pdf({
+              path: "David_Wasilewski_Resume.pdf",
+              format: "A4",
+              margin: {
+                top: "10mm",
+                right: "20mm",
+                bottom: "20mm",
+                left: "20mm"
+              },
+              printBackground: true,
+              preferCSSPageSize: true
+            });
+            
+            await browser.close();
+            fs.unlinkSync("temp.html");
+          }
           
-          fs.writeFileSync("temp.html", fullHtml);
-          execSync("wkhtmltopdf --enable-local-file-access --margin-top 10 --margin-right 20 --margin-bottom 20 --margin-left 20 --enable-external-links --enable-internal-links --javascript-delay 1000 temp.html David_Wasilewski_Resume.pdf");
-          fs.unlinkSync("temp.html");' > convert.js
+          convert();' > convert.js
 
       - name: Convert MD to PDF
         run: node convert.js
