--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -19,20 +19,18 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
 
       - name: Install dependencies
         run: |
           npm init -y
-          npm install marked puppeteer-core
-          sudo apt-get update
-          sudo apt-get install -y chromium-browser
+          npm install marked puppeteer
 
       - name: Create conversion script
         run: |
           echo 'const fs = require("fs");
           const marked = require("marked");
-          const puppeteer = require("puppeteer-core");
+          const puppeteer = require("puppeteer");
           
           const css = `
             <style>
@@ -114,7 +112,7 @@ jobs:
             fs.writeFileSync("temp.html", fullHtml);
             
             const browser = await puppeteer.launch({
-              executablePath: "/usr/bin/chromium-browser",
+              headless: "new",
               args: ["--no-sandbox", "--disable-setuid-sandbox"]
             });
             const page = await browser.newPage();
