--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -44,8 +44,15 @@ jobs:
               }
               h1 {
                 color: #2c3e50;
-                margin-top: 0.5em;
-                font-size: 30pt;
+                margin: 0;
+                padding: 0;
+                font-size: 24pt;
+                text-align: center;
+              }
+              .contact-info {
+                text-align: center;
+                margin-top: 5px;
+                margin-bottom: 15px;
               }
               h2, h3 {
                 color: #2c3e50;
@@ -115,8 +122,9 @@ jobs:
             const name = nameMatch[1].trim();
             const pdfFilename = `${name.replace(/\s+/g, "_")}_Resume.pdf`;
             
-            // Remove the NAME line from the markdown for display
-            const displayMd = md.replace(/^# NAME: .*$/m, `# ${name}`);
+            // Remove the NAME line from the markdown for display and wrap contact info in a div
+            const displayMd = md.replace(/^# NAME: .*$/m, `# ${name}`)
+                              .replace(/<p align="center">(.*?)<\/p>/s, '<div class="contact-info">$1</div>');
             const html = marked.parse(displayMd);
             
             const fullHtml = `<!DOCTYPE html>
