--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -28,7 +28,8 @@ jobs:
 
       - name: Create conversion script
         run: |
-          echo 'const fs = require("fs");
+          cat > convert.js << 'EOL'
+          const fs = require("fs");
           const marked = require("marked");
           const puppeteer = require("puppeteer");
           
@@ -182,7 +183,8 @@ jobs:
             fs.unlinkSync("temp.html");
           }
           
-          convert();' > convert.js
+          convert();
+          EOL
 
       - name: Convert MD to PDF
         run: node convert.js
