--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -181,9 +181,17 @@ jobs:
             // Calculate content length and adjust scale factor
             await page.evaluate(() => {
               const content = document.body;
-              const contentHeight = content.scrollHeight;
+              const header = content.querySelector('h1').nextElementSibling;
+              const mainContent = content.cloneNode(true);
+              
+              // Remove header for content measurement
+              mainContent.removeChild(mainContent.querySelector('h1'));
+              mainContent.removeChild(mainContent.querySelector('.contact-info'));
+              
+              const headerHeight = header.offsetHeight;
+              const contentHeight = mainContent.scrollHeight;
               const pageHeight = 1122; // A4 height in pixels at 96 DPI
-              const targetHeight = pageHeight * 2; // Target height for two pages
+              const targetHeight = (pageHeight * 2) - headerHeight; // Target height for content
               
               // Calculate initial scale factor
               let scaleFactor = targetHeight / contentHeight;
@@ -193,9 +201,11 @@ jobs:
               
               // Fine-tune the scale factor
               const checkFit = () => {
-                const newHeight = content.scrollHeight;
-                if (newHeight > targetHeight) {
-                  scaleFactor *= 0.95; // Reduce by 5%
+                const newContentHeight = mainContent.scrollHeight;
+                const totalHeight = headerHeight + newContentHeight;
+                
+                if (totalHeight > pageHeight * 2) {
+                  scaleFactor *= 0.98; // Reduce by 2% for finer control
                   content.style.setProperty('--scale-factor', scaleFactor);
                   return checkFit();
                 }
