--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -35,13 +35,20 @@ jobs:
           
           const css = `
             <style>
+              @page {
+                margin-top: 20mm;
+              }
               body {
                 font-family: Arial, sans-serif;
                 line-height: 1.4;
                 max-width: 800px;
-                margin: 10px auto;
+                margin: 0 auto;
                 padding: 5px;
                 font-size: 10pt;
+              }
+              .first-page {
+                margin-top: 0;
+                padding-top: 0;
               }
               h1 {
                 color: #2c3e50;
@@ -134,7 +141,7 @@ jobs:
                   <meta charset="utf-8">
                   ${css}
                 </head>
-                <body>
+                <body class="first-page">
                   ${html}
                 </body>
               </html>`;
