--- a/.github/workflows/rename-resume.yaml
+++ b/.github/workflows/rename-resume.yaml
@@ -40,7 +40,7 @@ jobs:
               }
               body {
                 font-family: Arial, sans-serif;
-                line-height: 1.4;
+                line-height: 1.6;
                 max-width: 800px;
                 margin: 0 auto;
                 padding: 5px;
@@ -60,11 +60,12 @@ jobs:
               .contact-info {
                 text-align: center;
                 margin-top: 5px;
-                margin-bottom: 15px;
+                margin-bottom: 20px;
               }
               h2, h3 {
                 color: #2c3e50;
-                margin-top: 0.5em;
+                margin-top: 1em;
+                margin-bottom: 0.5em;
                 font-size: 12.5pt;
               }
               a {
@@ -76,12 +77,13 @@ jobs:
               }
               ul, ol {
                 padding-left: 1.5em;
+                margin: 0.5em 0;
               }
               li {
-                margin: 0.25em 0;
+                margin: 0.4em 0;
               }
               p {
-                margin: 0.25em 0;
+                margin: 0.4em 0;
               }
               code {
                 background: #f8f9fa;
